[gd_scene load_steps=6 format=3 uid="uid://bmeh5ikv16kmc"]

[ext_resource type="Texture2D" uid="uid://2tdtf7lsuhdq" path="res://Cards/Stage-1.png.png" id="1_gcv0p"]
[ext_resource type="Texture2D" uid="uid://d2p47vcaan0f4" path="res://Cards/Stage_Connector-1.png.png" id="2_1goa4"]
[ext_resource type="Script" path="res://Level.gd" id="2_h3x2m"]
[ext_resource type="Theme" uid="uid://cmh48a56jrpto" path="res://Text.tres" id="2_jm4x8"]
[ext_resource type="Theme" uid="uid://c1qe63sj8tixj" path="res://null_buttons.tres" id="5_r2ld0"]

[node name="Level_Nodes" type="Node2D"]

[node name="Level" type="Sprite2D" parent="." node_paths=PackedStringArray("parent_node")]
scale = Vector2(3, 3)
texture = ExtResource("1_gcv0p")
script = ExtResource("2_h3x2m")
parent_node = NodePath("..")

[node name="Label" type="Label" parent="Level"]
offset_left = -20.0
offset_top = -14.6667
offset_right = 20.0
offset_bottom = 15.3333
theme = ExtResource("2_jm4x8")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="Left_Connector" type="Sprite2D" parent="Level"]
position = Vector2(-47, 0)
texture = ExtResource("2_1goa4")

[node name="Right_Connector" type="Sprite2D" parent="Level"]
position = Vector2(47, 0)
texture = ExtResource("2_1goa4")

[node name="Button" type="Button" parent="."]
offset_left = -46.0
offset_top = -43.0
offset_right = 45.0
offset_bottom = 45.0
theme = ExtResource("5_r2ld0")

[connection signal="pressed" from="Button" to="Level" method="_on_button_pressed"]
